# mm_microkit

./: .env  .gitignore  docker-compose.yml  pyproject.toml
microkit/: config.py  db.py  fs.py  kafka.py
postgres/: Dockerfile
postgres/initdb/: create_ingestion.sql
tests/: conftest.py  test_db.py  test_fs.py  test_kafka.py
