[project]
name = "mm-microkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fsspec>=2025.3.2",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
]


[tool.setuptools]
packages = ["microkit"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
